--- a/kikakusyo_project/templates/hotel/order_success_info.html
+++ b/kikakusyo_project/templates/hotel/order_success_info.html
@@ -36,11 +36,20 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">料金情報</h5>
-                <p>合計金額: {{ order.total_price|intcomma }}円</p>
-                {% comment %} {% if order.kupon_amount %} {% endcomment %}
-                    <p>クーポン割引: {{ order.kupon_amount|intcomma }}円</p>
-                {% comment %} {% endif %} {% endcomment %}
+                <p>合計金額: {{ order.total_price|floatformat:0|intcomma }}円</p>
+                <p>クーポン割引: {{ order.kupon_amount|floatformat:0|intcomma }}円</p>
                 <p>最終料金: {{ order.discounted_price|floatformat:0|intcomma }}円</p>
+                <script>
+                console.log("kupon_amount:", {{ kupon_amount|default:0 }});
+                console.log("total_price:", {{ total_price|default:0 }});
+                console.log("discounted_price:", {{ discounted_price|default:0 }});
+                </script>
+
+                {% comment %} <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                <script>
+                        console.log(" i want to kill the guy who sit next to me");
+                </script> {% endcomment %}
+                {% comment %} print(f"Debug: kupon_amount = {order.kupon_amount}, discounted_price = {order.discounted_price}") {% endcomment %}
             </div>
         </div>
     {% endif %}
