--- a/kikakusyo_project/templates/hotel/order_success_info.html
+++ b/kikakusyo_project/templates/hotel/order_success_info.html
@@ -7,11 +7,11 @@
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">予約者情報</h5>
-                <p>名前（姓）: {{ order.address.last_name }}</p>
-                <p>名前（名）: {{ order.address.first_name }}</p>
-                <p>郵便番号: {{ order.address.zip_code }}</p>
-                <p>住所: {{ order.address.address }}</p>
-                <p>電話番号: {{ order.address.phone_number }}</p>
+                <p>名前（姓）: {{ ordersuccess_info.last_name }}</p>
+                <p>名前（名）: {{ ordersuccess_info.first_name }}</p>
+                <p>郵便番号: {{ ordersuccess_info.zip_code }}</p>
+                <p>住所: {{ ordersuccess_info.address }}</p>
+                <p>電話番号: {{ ordersuccess_info.phone_number }}</p>
                 <p>注文日時: {{ order.created_at }}</p>
             </div>
         </div>
@@ -25,8 +25,8 @@
                         <p>プラン名: {{ item.product.name }}</p>
                         <p>人数: {{ item.product.people }}</p>
                         <p>部屋タイプ: {{ item.product.room_type }}</p>
-                        <p>チェックイン日: {{ address.checkin|date:"Y-m-d" }}</p>
-                        <p>チェックアウト日: {{ address.checkout|date:"Y-m-d" }}</p>
+                        <p>チェックイン日: {{ item.checkin|date:"Y-m-d" }}</p>
+                        <p>チェックアウト日: {{ item.checkout|date:"Y-m-d" }}</p>
                         <p>料金: {{ item.product.price|intcomma }}円</p>
                         <p>数量: {{ item.quantity }}</p>
                     </div>
